# MEDICAL_CHATBOT

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt
app/: app.py
app/common/: custom_exception.py  logger.py
app/components/: data_loader.py  embedding.py  llm.py  loader.py  retriever.py  vector_store.py
app/config/: config.py
app/templates/: index.html
custom_jenkins/: Dockerfile
