[project]
name = "medical-rag-chatbot"
version = "0.1.0"
description = "A medical RAG chatbot using LangChain and FastAPI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain>=1.3.0",
    "langchain-community>=0.4.0",
    "langchain-huggingface>=1.2.0",
    "faiss-cpu>=1.8.0",
    "pypdf>=5.0.0",
    "huggingface-hub>=0.28.0",
    "fastapi>=0.111.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.30.0",
    "sentence-transformers>=5.5.1",
    "python-multipart>=0.0.32",
    "langchain-groq>=1.1.2",
    "torch==2.5.1",
]
